Fix layout issues for mid screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,27 +7,16 @@
 :root {
   --dark-gray: hsl(0, 0%, 55%);
   --very-dark-gray: hsl(0, 0%, 55%);
-  /* --background: #ffffff; */
-  /* --foreground: #171717; */
-  --font-base: 15px;
 
   /* Font Variables */
   --body: "Alata", sans-serif;
   --heading: "Josefin Sans", sans-serif;
   --body-weight: 400;
   --heading-weight: 300;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-base: 15px;
 }
 
 body {
-  /* color: var(--foreground); */
-  /* background: var(--background); */
   font-family: var(--body);
   font-size: var(--font-base);
   font-weight: var(--body-weight);
@@ -45,6 +34,54 @@ h6 {
   text-transform: uppercase;
   font-family: var(--heading);
   font-weight: var(--heading-weight);
+}
+.flicker-effect:hover {
+  animation: flicker 0.45s forwards;
+}
+
+@keyframes flicker {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  16.67%,
+  50% {
+    opacity: 0.7;
+  }
+  33.33% {
+    opacity: 1;
+  }
+}
+@media (min-width: 768px) {
+  /* Black underline */
+  .black-underline {
+    --underline-color: black;
+  }
+
+  /* White underline */
+  .white-underline {
+    --underline-color: white;
+  }
+  .underline-hover {
+    text-decoration: none;
+    position: relative;
+  }
+
+  .underline-hover::before {
+    content: "";
+    position: absolute;
+    width: 90%;
+    height: 3px;
+    bottom: -6px;
+    left: 0;
+    background: var(--underline-color);
+    transform: scaleX(0);
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .underline-hover:hover::before {
+    transform: scaleX(1);
+  }
 }
 
 @media (max-width: 375px) {
